Change title to 'Welcome' and update description
Updated site title and description for clarity.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Playtests
-description: Single-file HTML prototypes + devlog
+title: Welcome
+description: Game prototypes + devlog
 theme: jekyll-theme-cayman
 url: "https://wscarlton.github.io"
 baseurl: "/games"
